# ntech-trnm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
config/: settings.py
deploy/: README.md  cloudrun-service.yaml  deploy.sh
deploy/vllm/: Dockerfile
guidelines/data_science/: data_and_experiment_versioning.md  mlops_basics.md  model_validation_leakage.md  notebook_hygiene.md  project_structure.md  reproducibility.md
guidelines/software_dev/: anti_patterns_code_smells.md  clean_code.md  code_review_checklist.md  design_patterns.md  git_and_security.md  python_style.md  solid.md  testing.md
ntech_agent/: __init__.py  embeddings.py  llm.py
ntech_agent/analysis/: static.py
ntech_agent/commits/: __init__.py  analytics.py  db.py  extract.py  query.py  summarize.py
ntech_agent/github/: client.py  mcp.py  sync.py
ntech_agent/graph/: builder.py  nodes.py  state.py  supervisor.py
ntech_agent/ingest/: chunking.py  index.py
ntech_agent/repomap/: __init__.py  build.py  expansion.py  graph.py  skeleton.py  tags.py
ntech_agent/report/: executive.py  generate.py
ntech_agent/retrieval/: hybrid.py  rerank.py
scripts/: build_index.py  eval.py  run_review.py  sync_commits.py  sync_repos.py
skills/code_best_practices/: SKILL.md  rubric.yaml
tests/: gold.example.jsonl  test_chunking.py  test_commit_insights_node.py  test_commits_analytics.py  test_commits_extract.py  test_commits_query.py  test_executive_report.py  test_llm_logging.py  test_nodes_compaction.py  test_repomap.py  test_rerank.py  test_retrieval_hybrid.py  test_settings.py  test_supervisor_match.py  test_supervisor_route.py
ui/: insights_tab.py  streamlit_app.py
