[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ntech-agent"
version = "0.1.0"
description = "Agente local de revisión de código para la org GitHub NTech-TRNM (RAG + LangGraph, serving vLLM en GCP Cloud Run)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NTech-TRNM" }]

dependencies = [
  # Orquestación
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-classic>=1.0.0",  # EnsembleRetriever vive aquí desde LangChain 1.0
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langchain-community>=0.3.0",
  # RAG / vector store
  "langchain-chroma>=0.1.4",
  "chromadb>=0.5.0",
  "langchain-huggingface>=0.1.0",
  "sentence-transformers>=3.0.0",
  "rank-bm25>=0.2.2",
  # GitHub
  "PyGithub>=2.3.0",
  "langchain-mcp-adapters>=0.1.0",
  # GCP Cloud Run auth (ID token)
  "google-auth>=2.30.0",
  "httpx>=0.27.0",
  # Config
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  # Análisis estático (usado en runtime por el agente)
  "ruff>=0.6.0",
  "radon>=6.0.1",
  # Repo map (tree-sitter + PageRank, calculado offline en build_index)
  "tree-sitter>=0.23",
  # OJO: pineado a 0.13.x deliberadamente. Las versiones 1.x de este paquete
  # (con su API process()/SymbolInfo) tienen un bug real de corrupción de
  # memoria en Windows: Node.start_point/end_point devuelven valores basura
  # (confirmado con un segfault reproducible contra el repo real ws-mex). La
  # API get_parser()/get_language() de 0.13.x es más simple y no lo tiene.
  "tree-sitter-language-pack==0.13.0",
  "networkx>=3.2",
  "numpy>=1.26",  # networkx.pagerank usa el backend scipy/numpy, no es opcional en la práctica
  # UI / CLI
  "streamlit>=1.37.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  # Dashboard de insights (tab Insights): ambas ya son dependencias transitivas
  # de streamlit, pero nuestro propio código las importa directamente ahora.
  "pandas>=2.0.0",
  "altair>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]
analysis-extra = [
  "pylint>=3.2.0",
]
pdf = [
  "markdown-pdf>=1.3",
]

[project.scripts]
ntech-sync = "scripts.sync_repos:main"
ntech-index = "scripts.build_index:main"
ntech-review = "scripts.run_review:main"
ntech-eval = "scripts.eval:main"
ntech-sync-commits = "scripts.sync_commits:main"

[tool.hatch.build.targets.wheel]
packages = ["ntech_agent", "config", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
